--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.js",
   "scripts": {
     "build:prod": "webpack --config webpack.prod.js",
-    "build:dev": "webpack-dev-server --config webpack.dev.js --open"
+    "build:dev": "webpack-dev-server --config webpack.dev.js --open",
+    "start": "webpack-dev-server --config webpack.config.js --open"
   },
   "repository": {
     "type": "git",
