--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:prod": "webpack --config webpack.prod.js",
     "build:dev": "webpack-dev-server --config webpack.dev.js --open",
-    "start": "webpack-dev-server --config webpack.config.js --open"
+    "start": "webpack"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,12 @@
     "swiper": "^6.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
+    "popper.js": "^1.16.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
