--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "^7.11.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
+    "html-webpack-plugin": "^4.3.0",
     "popper.js": "^1.16.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
