--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./src/index.js",
   "scripts": {
     "build:prod": "webpack --config webpack.prod.js",
-    "build:dev": "webpack-dev-server --config webpack.dev.js --open",
-    "start": "webpack"
+    "build:dev": "webpack-dev-server --config webpack.dev.js --open"
   },
   "repository": {
     "type": "git",
