--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "babel-loader": "^8.1.0",
     "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.10.0",
     "popper.js": "^1.16.1",
-    "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
